NEXUS-AI platform with core microservices, AI,
Set up core microservice infrastructure: Eureka Server, Config Server, API Gateway with routing and rate limiting
- User Management Service with JWT authentication, role-based access control, detailed User entity and security config
- AI Analytics Service with LSTM model using DeepLearning4J, asynchronous model training, REST predict endpoint
- Basic Blockchain Service with custom Block class, Proof of Stake validator selection, blockchain REST endpoints
- Voting Service scaffolding with Ethereum smart contract stub and Web3j integration placeholders
- Notification Service skeleton with WebSocket configuration and REST controllers
- Payment Service skeleton with Kafka integration placeholder and processing logic
- Docker Compose setup for development environment
- Partial unit and integration tests for JWT and Proof of Stake components
- Swagger/OpenAPI documentation for AI and Blockchain services
- Basic CI/CD setup with GitHub Actions and Docker image building